decafcomp/llvm/dev/undefined-return.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/dev/undefined-return.llvm:6:7: error: value doesn't match function result type 'i32'
  ret void
      ^
